--- a/principles_of_pca.ipynb
+++ b/principles_of_pca.ipynb
@@ -12,38 +12,15 @@
     "1. Interpolate the daily YC data till 120 points at 3 month freq\n",
     "2. Do PCA, compute covariance matrix, do eigendecomposition.\n",
     "3. Replicate PCA against maturity plot and table.\n",
-    "4. Do components analysis: e.g rationalize shape to corresponding movement (from component-maturity plot)\n",
-    "5. Plot the PCAs over time. Isolate an area with significant movement. Then explain it via checking the right place.\n",
     "\n",
     "## Signal Generation (Blocker)\n",
     "\n",
     "1. Use third PCs to generate signals (weights of the butterfly). Rolling window, then 1Y wait period, then trade.\n",
     "2. Code up same, via various parameter input, generate signals\n",
-    "3. Generate the 8 plots in the paper, interpret\n",
     "\n",
     "## PnL Calculation (Blocker)\n",
     "\n",
-    "1. Calculate yield pickup per trade in bps\n",
-    "2. Calculate notional weights from risk weights using DV01\n",
-    "3. From notional amounts, calculate returns/PnL with attribution: from MTM and carry\n",
-    "    * Dollar amounts of PnL\n",
-    "    * Sharpe ratio of PnL\n",
-    "\n",
-    "\n",
-    "## Deliverables\n",
-    "\n",
-    "Original\n",
-    "* Cum var table, yc over maturities plot\n",
-    "* Components over time overlay with slope\n",
-    "* Butterfly spread plots for diff. values of rolling window and similar plots\n",
-    "\n",
-    "Extra\n",
-    "* ?\n",
-    "\n",
-    "## Todo\n",
-    "\n",
-    "* Examine why weights drastically change\n",
-    "* Finish up plots"
+    "1. Calculate yield pickup per trade in bps\n"
    ]
   },
   {
